force-app/main/default/objects/QAC_Waiver_Default__mdt/QAC_Waiver_Default__mdt.object-meta.xml
<CustomObject>
    <label>QAC Waiver Default</label>
    <pluralLabel>QAC Waiver Defaults</pluralLabel>
</CustomObject>