force-app/main/default/objects/QAC_Waiver_Default__mdt/fields/Approve__c.field-meta.xml
<CustomField>
    <fullName>Approve__c</fullName>
    <label>Approve</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>