force-app/main/default/objects/QAC_Waiver_Default__mdt/fields/Cost_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Sale__c</fullName>
    <label>Cost of Sale AU (AUD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>