force-app/main/default/objects/QAC_Waiver_Default__mdt/fields/Cost_of_Sale_CAD__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Sale_CAD__c</fullName>
    <label>Cost of Sale CA (CAD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>