force-app/main/default/objects/QAC_Waiver_Default__mdt/fields/Paid_Service__c.field-meta.xml
<CustomField>
    <fullName>Paid_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid Service?</label>
    <type>Checkbox</type>
</CustomField>