force-app/main/default/objects/QAC_Waiver_Default__mdt/listViews/QAC_Waiver_Default_View.listView-meta.xml
<ListView>
    <fullName>QAC_Waiver_Default_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Waiver_Type__c</columns>
    <columns>Waiver_Sub_Type__c</columns>
    <columns>Approve__c</columns>
    <columns>Condition_Met__c</columns>
    <columns>Cost_of_Sale__c</columns>
    <columns>Cost_of_Sale_NZD__c</columns>
    <columns>Cost_of_Sale_GBP__c</columns>
    <columns>Cost_of_Sale_EUR__c</columns>
    <columns>Cost_of_Sale_USD__c</columns>
    <columns>Cost_of_Sale_CAD__c</columns>
    <columns>Paid_Service__c</columns>
    <filterScope>Everything</filterScope>
    <label>QAC Waiver Default View</label>
</ListView>